base + index templates

--- a/views/base.html
+++ b/views/base.html
@@ -4,16 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{.Title}}</title>
-        <link rel="stylesheet" href="../static/css/style.css"> 
+        <link rel="stylesheet" href="/static/css/main.css"> 
     </head>
     <body>
         <header>
             <h1>gotodo</h1>
             <nav>
                 <ul>
-                    <li>home</li>
-                    <li>todolist</li>
-                    <li>create task</li>
+                    <li><a href="/">home</a></li>
+                    <li><a href="/todolist">todolist</a></li>
+                    <li><a href="/create/task">create task</a></li>
                 </ul>
             </nav>
         </header>
