--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,3 @@
-{{define "content" .}}
-<div>
-    <h1>gotodo landing page</h1>
-</div>
+{{define "content"}}
+<h1 class="task">gotodo landing page</h1>
 {{end}}
