--- a/views/base.html
+++ b/views/base.html
@@ -18,7 +18,7 @@
             </nav>
         </header>
         <main>
-            {{block "content" .}}
+            {{block "content" .Data}}
             <h1>sorry, no content for this page</h1>
             {{end}}
         </main>
