--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,3 @@
 {{define "content"}}
-<h1 class="task">gotodo landing page</h1>
-{{end}}
-
-{{define "scripts"}}
-<script type="text/javascript" src="/static/js/main.js" defer></script> 
+<h1>gotodo landing page</h1>
 {{end}}
