--- a/views/task/create.html
+++ b/views/task/create.html
@@ -24,7 +24,7 @@
 		</div>
 
 		<div>
-			<input type="submit" name="submit" value="create">
+			<input type="submit" value="create">
 		</div>
 	</fieldset>
 </form>
