--- a/views/base.html
+++ b/views/base.html
@@ -19,7 +19,7 @@
 			<ul>
 				<li><a href="/">home</a></li>
 				<li><a href="/todolist">todolist</a></li>
-				<li><a href="/create/task">create task</a></li>
+				<li><a href="/task/create">create task</a></li>
 			</ul>
 		</nav>
 	</header>
